<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/actNumberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:text="@string/actual_number_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/actNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/actNumberText"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/actual_number_value" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/actBikeKeyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/actNumber"
        android:layout_marginTop="32dp"
        android:text="@string/actual_bike_key_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/actBikeKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/actBikeKeyText"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textNoSuggestions"
        android:text="@string/actual_bike_key_value" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="29dp"
        android:text="@string/send" />

    <Button
        android:id="@+id/changeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sendButton"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="22dp"
        android:text="@string/change_keys" />
    
</RelativeLayout>